I-000052 'Core styles'. Break the gray, white, primary colors and fix old uses

--- a/css/style.css
+++ b/css/style.css
@@ -78,40 +78,19 @@ button:focus {
 .text-center {
 	text-align: center;
 }
-.text-gray-500 {
+.text-gray{
 	color: #b7b9cc;
-	font-weight: 500;
 }
-.text-gray-600 {
+.text-gray-dark{
 	color: #858796;
-	font-weight: 600;
 }
-.text-white-300 {
-	color: white;
-	font-weight: 800;
-}
-.text-white-800 {
-	color: white;
-	font-weight: 800;
-}
-.text-white-700 {
-	color: white;
-	font-weight: 800;
-}
-.text-s {
-	font-size: 0.8rem;
-}
-.text-m {
-	font-size: 1.6rem;
-}
-.text-gray-800 {
+.text-dark{
 	color: #5a5c69;
-	font-weight: 800;
 }
-.small {
-	font-size: 80%;
+.text-white{
+	color: white;
 }
-.text-primary-600{
+.text-primary{
 	color: #6C63FF;
 	font-weight: 600;
 }
@@ -124,11 +103,31 @@ button:focus {
 .text-active{
 	color: #1aa385;
 }
+.fw-600{
+	font-weight: 600;
+}
+.fw-500{
+	font-weight: 500;
+}
+.fw-700{
+	font-weight: 700;
+}
+.fw-800{
+	font-weight: 800;
+}
+.text-s {
+	font-size: 0.8rem;
+}
+.text-m {
+	font-size: 1.6rem;
+}
+.small {
+	font-size: 80%;
+}
 /* Error */
 
 .error {
 	font-size: 7rem;
-	color: #5a5c69;
 	position: relative;
 	display: inline-block;
 }
@@ -543,14 +542,10 @@ table{
 	width: 100%;
 	height: 220px;
 }
-thead{
-	color: #858796;
-}
 thead > tr {
 	height: 0.5rem;
 }
 tbody{
-	color: #b7b9cc;
 	font-size: 14px;
 }
 td, th{
